2006-03-21  Alex Roitman  <shura@gramps-project.org>
	* various: rename doc to data; move most of src/data to data.

2006-03-20  Don Allingham  <don@gramps-project.org>
	* src/const.py.in: fix path combination
	* src/Config/__init__.py: actually pay attention to no_gconf

2006-03-20  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/GrampsDb/_GrampsIniKeys.py: os independent path

2006-03-20  Don Allingham  <don@gramps-project.org>
	* src/lds.py: move LDS specific data out of const.py.in
	* src/const.py.in: remove unused info
	* src/DataViews.py: allow suppression of tool tips
	* src/NameDisplay.py: sorted name key generation
	* src/RelLib/_Name.py: remove sorted name function
	* src/DisplayTabs.py: assign reference handle to new event_ref
	* src/DisplayModels.py: new sort function
	* src/Editors/_EditPerson.py: call the callback if defined
	* src/SelectPerson.py: take out the profiling code
	* src/GrampsDb/_GrampsBSDDB.py: use db.THREAD to avoid 
	RUNRECOVERY error, fix cursors

2006-03-19  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: select person used for children
	* src/PeopleModel.py: used raw data functions for name display
	* src/NameDisplay.py: add raw functions for name display to 
	avoid the need to create a Name instance
	* src/SelectPerson.py: fixed widths

2006-03-18  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: add add_person functionality
	* src/DisplayTabs.py: add share option to sources
	* src/glade/gramps.glade: change dialog size
	* src/ListModel.py: fixed column widths, ellipses
	* src/SelectEvent.py: grab correct field
	* src/SelectSource.py: added

2006-03-18  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Remove scrollkeeper checks and other unused
	statements.

2006-03-18  Don Allingham  <don@gramps-project.org>
	* src/RelImage.py: removed
	* src/AddMedia.py: added scale_image function from RelImage
	* src/DataViews/_PersonView.py: use fixed width/height mode to